fix text overflow in user ugc page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -162,15 +162,17 @@ border-radius(2 px)
 .p-tags-center {
     letter-spacing: 1px;
     line-height: 1px;
-    padding: 0;
-    margin: 0;
-    margin-top: 5px;
-    margin-bottom: -10px;
-    font-size: 13px;
+    padding-top: 15px;
+     /*width:150px;*/
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
-    /*font-weight: 10;*/
+    /*padding: 0;*/
+    margin: 0;
+    margin-top: -5px;
+    margin-bottom: -10px;
+    font-size: 13px;
+    /*font-weight: 10px;*/
     color: #b3b3b3;
     height: 2.4em;
     text-align: center;
